...
            key: Key('Home'),
            selectedIcon: Icon(Icons.home),
            icon: Icon(Icons.home_outlined),
            label: 'Home',
          ),
          NavigationDestination(
            key: Key('Fav'),
            selectedIcon: Icon(
              Icons.favorite_sharp,
              color: Colors.red,
            ),
            icon: Icon(Icons.favorite_sharp),
            label: 'Wishlist',
...
